# Worldbank-project

./: README.md  ingest.py  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json
frontend/src/: App.js
ingestion/: pdf_loader.py
processing/: embeddings.py  splitter.py  vector_store.py
rag/: groq_llm.py  rag_pipeline.py  retriever.py
